# python_apps

./: args_playground.py  blackjack.py  diagonalDifference.py  dictionaries.py  fileimport.py  gui_example.py  gui_example2.py  gui_example3.py  helloworld.py  militarytime.py  primechecker.py  ransom_note.py  signratioarray.py  sort_bubble.py  tip-calculator.py
day-25-start/: main.py
day_15/: coffee_machine.py
day_16/: prettytable_exercise.py
day_16/oop_coffee_machine/oop-coffee-machine-start/: main.py
day_17/: main.py
day_17/quiz-game-start/: data.py  data2.py  main.py  quiz_brain.py
day_27/: main.py
ftp_connection/: connection.py
higher_lower/: highlow.py
other/: example2.py  exercise2.py  exercise3.py  file.txt  output_file.txt  regex3.py
python_packaging_01/jeffry_chacon/: pyproject.toml
python_packaging_01/jeffry_chacon/jeffry_chacon/: __init__.py
python_packaging_01/section_01/: use_venv.py
python_packaging_01/section_03/jeffry_chacon/: pyproject.toml
python_packaging_01/section_03/jeffry_chacon/jeffry_chacon/: __main__.py
python_packaging_01/section_04/jeffry_chacon/: LICENCE.TXT  pyproject.toml
python_packaging_01/section_04/jeffry_chacon/jeffry_chacon/: print_me_funcs.py
python_packaging_01/section_04/jeffry_chacon/scripts/: run_print_me.py
subprocess_practice/: example1.py  interview1.py  output.txt  regex.py
